--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,7 +47,8 @@
     --gray-6: #232120;
     --gray-7: #171717;
 
-    --black: #000000;
+    --black-1: #000000;
+    --black-2: #0a0a0a;
 
     --title-font-color : #FFFFFF;
     --title-sub-font-color : #E9E7DF;
