--- a/src/app/(main)/_components/header.module.css
+++ b/src/app/(main)/_components/header.module.css
@@ -2,26 +2,26 @@
 .header {
     display: flex;
     background: var(--gray-6);
-    height: 74px;
+    height: 4rem;
     justify-content: space-between;
-    padding: 20px 40px;
+    padding: 1.25rem 2.5rem;
     align-items: center;
 }
 
 .logo {
     display: flex;
-    gap: 50px;
+    gap: 3.75rem;
     align-items: flex-end;
 }
 
 .font_logo {
-    font-size: 28px;
+    font-size: 1.75rem;
 }
 
 .link_buttons {
     display: flex;
-    gap: 10px;
-    font-size: 16px;
+    gap: 1.125rem;
+    font-size: 1rem;
     text-transform: capitalize;
 }
 
@@ -40,12 +40,12 @@
 
 .header_auth_buttons {
     display: flex;
-    gap: 10px;
+    gap: 0.625rem;
 }
 
 .header_auth_button {
-    border-radius: 10px;
-    padding: 10px 15px;
+    border-radius: 0.625rem;
+    padding: 0.625rem 1rem;
     background: var(--gray-6);
     font-weight: 600;
     transition: 0.5s;
