--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,5 +1,6 @@
 .layout {
-    min-height: calc(100vh - 5rem);
-    margin: 1rem auto 0;
-    width: 1200px;
+    min-height: calc(100vh - 4rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
