--- a/src/app/(auth)/_components/button.module.css
+++ b/src/app/(auth)/_components/button.module.css
@@ -5,6 +5,6 @@
     border: 1px solid transparent;
     border-radius: 0.75rem;
     width: 100%;
-    padding: 10px;
+    padding: 0.625rem;
     transition: 0.5s;
 }
