--- a/src/app/(auth)/_components/input.module.css
+++ b/src/app/(auth)/_components/input.module.css
@@ -16,7 +16,7 @@
     border: 1px solid transparent;
     border-radius: 0.75rem;
     width: 100%;
-    padding: 10px;
+    padding: 0.625rem;
     transition: 0.5s;
 }
 
