--- a/src/app/(auth)/_components/login.module.css
+++ b/src/app/(auth)/_components/login.module.css
@@ -34,7 +34,7 @@
 }
 
 .form_div {
-    width: 366px;
+    width: 22.875rem;
     padding: 1.5rem 0;
     display: flex;
     flex-direction: column;
