--- a/src/app/(auth)/signup/singup.module.css
+++ b/src/app/(auth)/signup/singup.module.css
@@ -1,5 +1,5 @@
 .formStyle {
-    width: 366px;
+    width: 22.875rem;
     padding: 1.5rem 0;
     display: flex;
     gap: 0.725rem;
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: 5fr 1fr;
     align-items: end;
-    grid-gap: 10px;
+    grid-gap: 0.625rem;
 }
 
 .confirmButton {
@@ -30,7 +30,7 @@
 .confirmEmailTime {
     position: absolute;
     top: 0;
-    right: 10px;
+    right: 0.625rem;
 }
 
 .emailConfirmInput {
@@ -39,7 +39,7 @@
     border: 1px solid transparent;
     border-radius: 0.75rem;
     width: 100%;
-    padding: 10px;
+    padding: 0.625rem;
     transition: 0.5s;
 }
 
