:sparkles: feat: 도메인별 머리글을 추가합니다.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,6 +54,8 @@
 
     --title-font-color: #FFFFFF;
     --title-sub-font-color: #E9E7DF;
+
+    --border-1: hsla(0,0%,100%,.14)
 }
 
 @media (prefers-color-scheme: dark) {
