--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -25,6 +25,11 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     line-height: 1;
+
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
 }
 
 ol, ul {
