--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,5 +1,6 @@
 .layout {
-    min-height: calc(100vh - 4rem);
+    padding-top: 4rem;
+    min-height: calc(100vh);
     display: flex;
     justify-content: center;
     align-items: center;
