--- a/src/app/(auth)/layout.module.scss
+++ b/src/app/(auth)/layout.module.scss
@@ -1,4 +1,8 @@
 .auth_layout {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 25rem;
     margin: -8rem auto 0;
     padding: 1rem;
