--- a/src/app/(main)/(overview)/page.module.scss
+++ b/src/app/(main)/(overview)/page.module.scss
@@ -1,8 +1,15 @@
 .main {
     width: 800px;
     display: flex;
-    gap: 2rem;
+    flex-direction: column;
+    gap: 1.5rem;
     margin: 100px auto 0;
+}
+
+.top {
+    display: flex;
+
+    gap: 2rem;
 }
 
 .imgBox {
@@ -14,6 +21,7 @@
 .myName {
     font-weight: bold;
     font-size: 28px;
+    margin-bottom: 0.5rem;
 }
 
 .userBox {
@@ -55,4 +63,15 @@
 
 .copyLinkButton {
     cursor: pointer;
+}
+
+.stackLabels {
+    margin-left: 1.75rem;
+}
+
+.description{
+    border-radius: 0.25rem;
+    padding: 1rem;
+    background: var(--gray-6);
+    line-height: 2rem;
 }
