--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -3,5 +3,5 @@
     min-height: calc(100vh);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
